overlays/magi/home/gateway/httproute-immich-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-redirect
  namespace: home
spec:
  parentRefs:
    - name: home-gateway
      sectionName: http
  hostnames:
    - photos.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
