overlays/magi/home/gateway/httproute-immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: home
spec:
  parentRefs:
    - name: home-gateway
      sectionName: https
  hostnames:
    - photos.vbalex.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich
          port: 2283
