overlays/magi/home/gateway/httproute-vaultwarden-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-redirect
  namespace: home
spec:
  parentRefs:
    - name: home-gateway
      sectionName: http
  hostnames:
    - vault.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
