overlays/magi/home/gateway/httproute-vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route
  namespace: home
spec:
  parentRefs:
    - name: home-gateway
      sectionName: https
  hostnames:
    - vault.vbalex.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
